--- a/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
@@ -23,8 +23,14 @@
     {{ callboard.content | raw }}
     </div>
   </article>
-  <aside>
+  <aside style="width:360px; height:300px; float:right; margin-top: 0;">
+  	<script type="text/javascript">
+	/*360*300，创建于2014-4-11*/
+	var cpro_id = "u1518984";
+	</script>
+	<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
   </aside>
+  
 </div>
 
 {% include 'JiliApiBundle::footer.html.twig' %}
