--- a/src/Jili/ApiBundle/Resources/views/Top/task.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/task.html.twig
@@ -1,4 +1,4 @@
-<li class="task"> <a class="taskBtn" href="#">我的任务列表</a><em>3</em>
+<li class="first task"> <a class="taskBtn" href="#">我的任务列表</a><em>3</em>
   <ul>
     {% if task.checkin==1 %}
     <li class="signs"><a id="sign" onclick="signs();">每日签到<span>{{task.checkinPoint}}米粒</span></a></li>
