--- a/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
@@ -49,6 +49,14 @@
       {{ render(controller('JiliEmarBundle:Websites:hot', { 'tmpl': 'cps', 'max': 9 } ) ) }}
   </div><!-- eof w300 -->
 
+  <div class="w204 h340 fl" style=" margin-top:140px;">
+    <script type="text/javascript">
+	/*200*200，创建于2014-4-11*/
+	var cpro_id = "u1519095";
+	</script>
+	<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+  </div>
+  
   <div class="main w930 fr">
       {{ render(controller('JiliEmarBundle:Ghs:partialOnCps', {'catids': app.request.query.get('c_h') } ))  }}
   </div><!-- main w834 -->
