--- a/web/css/adMore.css
+++ b/web/css/adMore.css
@@ -2,7 +2,7 @@
 	margin-top:30px;
 }
 .adMore article{
-	width: 955px;
+	/*width: 955px;*/
 	display: inline-block;
 	background-image:url(../images/adMoreBg_repeat.jpg);
 }
