--- a/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_search.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_search.html.twig
@@ -1,7 +1,7 @@
 
       <ul class="searchRecommend clearfix">
     {% for row in ghs_pdts %}
-        <li>
+        <li class="curPt">
           {% spaceless %}
           <dt>
             {% if app.session.has('uid')  %}
