--- a/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
@@ -36,10 +36,10 @@
   <div class="w615 h340 fl">
      <ul class="cpsBanner">
       <div class="moveDiv" style="width: 2460px; left: -1230px;">
-          <li><img width="615" height="320" src="{{ asset('other140307/image100.jpg') }}"></li>
-          <li><img width="615" height="320" src="{{ asset('other140307/image100.jpg') }}"></li>
-          <li><img width="615" height="320" src="{{ asset('other140307/image100.jpg') }}"></li>
-          <li><img width="615" height="320" src="{{ asset('other140307/image100.jpg') }}"></li>
+          <li><a href="http://sale.jd.com/act/hyXLWdTDmkGVOa12.html?erpad_source=erpad"><img width="615" height="320" src="{{ asset('images140307/cpsBanner/cpsBanner1.jpg') }}"></a></li>
+          <li><a href="http://3pm.yixun.com/?YTAG=1.100010005&cp-ptss=1810-36-34932-t&DAP=2364320739748453151:563798767808022290:33554432:13800877"><img width="615" height="320" src="{{ asset('images140307/cpsBanner/cpsBanner2.jpg') }}"></a></li>
+          <li><a href="http://cms.yhd.com/cmsPage/show.do?pageId=70920&ref=gl.1.1.1.[6310_11000481_1].0.LGyEAn"><img width="615" height="320" src="{{ asset('images140307/cpsBanner/cpsBanner3.jpg') }}"></a></li>
+          <li><a href="http://cms.yhd.com/cmsPage/show.do?pageId=71095&ref=gl.1.1.1.[6304_10869061_1].0.LGyEAn"><img width="615" height="320" src="{{ asset('images140307/cpsBanner/cpsBanner4.jpg') }}"></a></li>
       </div>
       <a class="prevBtn">prev</a><a class="nextBtn">next</a>
     </ul>
