added commissions on product retrieve page

--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
@@ -30,7 +30,7 @@
 
             <p class="price">￥{{ row.cur_price }}</p>
 
-            <p class="rebate">返利最高：<em>{{ webs[row.web_id].commission }}%</em></p>
+            <p class="rebate">返利最高：<em>{{ web_commissions[row.web_id] }}%</em></p>
 
           </dd>
         </li>
