--- a/src/Jili/EmarBundle/Resources/views/Ghs/partial_on_cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/partial_on_cps.html.twig
@@ -17,11 +17,13 @@
     <ul class="commodityUl btbn clearfix">
 {% for row in ghs_pdts %}
       <li>
-        <dt><a href="{{ row.ghs_o_url|replace({ 'APIMemberId':app.session.get('uid') }) }}" target="_blank" rel="nofollow"><img src="{{ row.pic_url }}" height="150" width="150"></a></dt>
+        <dt><a href="{{ row.ghs_o_url|replace({ 'APIMemberId':app.session.get('uid') }) }}" target="_blank" rel="nofollow"><img src="{{ row.pic_url }}" height="auto" width="269"></a></dt>
         <dd>
-         <p class="price">¥{{ row.ghs_price }}</p> 
-          <p class="shop">{{ row.web_name }}</p>
-          <p class="rebate">返利最高：<em>{{ row.discount }}%</em></p>
+         <span class="price fl">¥{{ row.ghs_price }}</span>
+		 <span class="tr fr fontNormal"> 
+           <p>{{ row.web_name }}</p>
+           <p>返利最高：<em>{{ row.discount }}%</em></p>
+		 </span>
         </dd>
       </li>
 
