--- a/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
@@ -38,7 +38,7 @@
       <h3>所有商品分类</h3>
       {{ render(controller('JiliEmarBundle:Product:category', { 'qs': app.request.query.all, 'rt': 'jili_emar_product_search' })) }}
     </div>
-	<div style="fl">
+	<div class="fl">
 	<script type="text/javascript">
 /*200*200，创建于2014-4-11*/
 var cpro_id = "u1519087";
