--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -18,7 +18,7 @@
       {{ render(controller('JiliEmarBundle:Product:category', { 'qs': app.request.query.all, 'rt': 'jili_emar_product_retrieve' })) }}
     </div><!-- eof module categorys -->
 
-    <div id="vote">
+    <!--<div id="vote">
       <h3>快速问答</h3>
       <div class="voteMain clearfix">
           <dt><img width="90" height="90" src="{{ asset('other140307/image100.jpg') }}"></dt>
@@ -27,7 +27,7 @@
           <p><a href="#" class="goVote">去投票</a></p>
         </dd>
       </div>
-    </div><!-- eof vote -->
+    </div>--><!-- eof vote -->
     <div id="timeline">
       <h3>最新动态</h3>
       <div class="mask">
