--- a/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
@@ -75,7 +75,7 @@ $(document).ready(function(){
                 {% else %}
                     <a href="{{ path('_user_login')  }}">
                  {% endif %}
-                 <img src="{{ row.pic_url }}" height="130" width="200"></a></p>
+                 <img src="{{ row.pic_url }}" height="auto" width="200"></a></p>
                  <p class="price"><span class="price1">¥</span><span class="price2">{{ row.ghs_price }}</span><del class="corLightGray">原价￥{{ row.ori_price }}</del><span class="discount">{{ row.discount }}%折</span></p> 
                  <p class="corGlobGray">销量{{ row.bought }}件</p>
 				 <div class="model hoverView curPt">
