--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
@@ -19,20 +19,19 @@
 
 {% for row in products %}
         <li>
-        <dt class="image"><img src="{{ row.pic_url }}" width="200" height="200" alt="pic url" /><a class="shop" href="{{ webs[row.web_id].url |replace( { 'APImemberId': app.session.get('uid') } ) }}" target="_blank" rel="nofollow" >{{ row.web_name }}</a></dt>
+        <dt class="image curPt"><img src="{{ row.pic_url }}" width="200" height="200" alt="pic url" /></dt>
           <dd class="clearfix">
-            <p class="title">
-           {% if app.session.get('uid') is defined %}
-           <a href="{{ row.p_o_url|replace( { 'APImemberId': app.session.get('uid') } ) }}" target="_blank"  rel="nofollow" >
-           {% else %}
-           <a href="#">
-           {% endif %}{{ row.p_name }}</a></p>
-
-            <p class="price">￥{{ row.cur_price }}</p>
-
-            <p class="rebate">返利最高：<em>{{ webs[row.web_id].commission }}%</em></p>
-
-          </dd>
+            <div class="title">
+			   {% if app.session.get('uid') is defined %}
+			   <a href="{{ row.p_o_url|replace( { 'APImemberId': app.session.get('uid') } ) }}" target="_blank"  rel="nofollow" ></a>
+			   {% else %}
+			   <a href="#">{% endif %}{{ row.p_name }}</a>
+		   </div>
+           <div class="detail">
+            <span class="fl price">￥<strong>{{ row.cur_price }}</strong></span>
+            <span class="tr fr fontNormal"><a class="shop corGlobRed" >{{ row.web_name }}</a><br/><p class="corLightGray">返利最高：<em class="corGlobRed"><!--{{ webs[row.web_id].commission }}%--></em></p></span>
+           </div>
+		 </dd>
         </li>
 {% else %}
 <em>很抱歉，没有找到相关的商品。</em>
