--- a/web/css140307/index.css
+++ b/web/css140307/index.css
@@ -554,11 +554,11 @@
 	color: #FF6B4F;
 }
 #indexRecommend{ position:relative;}
-#indexRecommend ul li {	background-color: #FFFFFF; float: left; margin: 0 15px 15px 0; padding: 0 0 7px; width: 195px; overflow: hidden; position:relative;}
+#indexRecommend ul li {	background-color: #FFFFFF; float: left; margin:0 1px 1px 0; padding:0 0 14px; width: 203px; overflow: hidden; position:relative;}
 #indexRecommend ul li.mr0 {	margin-right: 0;}
 #indexRecommend ul li p { padding: 0px 10px;}
 #indexRecommend ul li p.image {	padding: 0;	margin-bottom: 5px;}
-#indexRecommend ul li p.image a img:hover{opacity:0.8;filter:alpha(opacity=80)}
+#indexRecommend ul li p.image a img{ width:210px; height:auto;}
 #indexRecommend ul li p.price {	color: #f74a28;}
 #indexRecommend ul li p.price .price1{}
 #indexRecommend ul li p.price .price2 {	font-size: 18px; font-weight: bold; margin:0 3px;}
@@ -567,7 +567,7 @@
 #indexRecommend .menu{ position:absolute; right:0; top:0;}
 #indexRecommend .menu a.more{background: url("../images140307/iconImage.png") no-repeat scroll 0 -897px; padding-left:20px; color:#666;}
 #indexRecommend .menu a.more:hover{background: url("../images140307/iconImage.png") no-repeat scroll 0 -937px; color:#ff6b4f;}
-#indexRecommend ul li .model{background: #ff6b4f;width: 175px;height: 18px;color: #fff;text-align: center;position: absolute;left: 0;bottom: 0;opacity: .85;filter: alpha(opacity=85);display:none;padding:15px 21px 24px 12px;}
+#indexRecommend ul li .model{background: #ff6b4f;width: 175px;height: 25px;color: #fff;text-align: center;position: absolute;left: 0;bottom: 0;opacity: .85;filter: alpha(opacity=85);display:none;padding:15px 21px 24px 12px;}
 #indexRecommend ul li .model strong{font-size: 16px; margin-left: 10px; vertical-align: 5px;}
 #marketActivity ul {
 	padding: 10px;
