--- a/src/Jili/EmarBundle/Resources/views/Hotactivity/index.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Hotactivity/index.html.twig
@@ -28,7 +28,7 @@
 3509     'web_name' => '识尚会',
 3510     'hot_name' => '高丝雪肌精特卖专场2折起',
 3511     'pic_url' => 'http://www.fashionls.com/www/image/campaign/C000391/C000391-BANNER.jpg',
-3512     'hot_o_url' => 'http://p.yiqifa.com/n?k=5EbPPl64rI6HWE2LWEgH2mquUZgL18H_UmUmf9MbRObAYOexRSeEYO7_R9PwCQ4y3mDdCc6L!mg_!poE35sL35ycY8Hl1NtdCZgVYIeuUJsx49BEUtesYNscYmPmU5Vy4cP7YPolYmPS3     OKoMOosUmPiMQLErI6H6E3SWmLFWEjS1QLLrI6HYmLErn6w6lDqWnDOrIW-&e=APImemberId&spm=139216929186018017.1.1.1',
+3512     'hot_o_url' => 'http://p.yiqifa.com/n?k=5EbPPl64rI6HWE2LWEgH2mquUZgL18H_UmUmf9MbRObAYOexRSeEYO7_R9PwCQ4y3mDdCc6L!mg_!poE35sL35ycY8Hl1NtdCZgVYIeuUJsx49BEUtesYNscYmPmU5Vy4cP7YPolYmPS3     OKoMOosUmPiMQLErI6H6E3SWmLFWEjS1QLLrI6HYmLErn6w6lDqWnDOrIW-&e=APIMemeberId&spm=139216929186018017.1.1.1',
 3513     'discount' => '2.1',
 3514     'brand_name' => '',
 3515     'hot_catid' => '07',
