fixed APIMemeberId typo

--- a/src/Jili/EmarBundle/Resources/views/Hotactivity/partialOnCps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Hotactivity/partialOnCps.html.twig
@@ -37,7 +37,7 @@
 3841     'web_name' => '天品网',
 3842     'hot_name' => '姿彦丽儿女士内衣专场',
 3843     'pic_url' => 'http://p2.tianping.com/uploads/201402/18/4338678.jpg',
-3844     'hot_o_url' => 'http://p.yiqifa.com/n?k=2mLErn2lWNzSrI6HCZg7Rnu_fmUmUSe7C5BdRJydf96_Ypo8R9BdMIHSWnjOWEzefNjVWnjLfNj_rI6HDcglMBycrn3m1nyH1n2LWE     yHWZLErJoH2mLL1nBEWEU91ZLE&e=APIMemeberId&spm=139216929186018017.1.1.1',
+3844     'hot_o_url' => 'http://p.yiqifa.com/n?k=2mLErn2lWNzSrI6HCZg7Rnu_fmUmUSe7C5BdRJydf96_Ypo8R9BdMIHSWnjOWEzefNjVWnjLfNj_rI6HDcglMBycrn3m1nyH1n2LWE     yHWZLErJoH2mLL1nBEWEU91ZLE&e=APIMemberId&spm=139216929186018017.1.1.1',
 3845     'discount' => '1.0折起',
 3846     'brand_name' => '姿彦丽儿女士内衣专场',
 3847     'hot_catid' => '01',
