--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -64,6 +64,7 @@
 
     <div id="marketActivity">
         {# render(controller('JiliEmarBundle:Hotactivity:hot', {'max': 3, 'tmpl': 'top' } )) #}
+        {{ render(controller('JiliApiBundle:Top:market' ) ) }}
     </div><!-- eof marketActivity -->
   </div><!-- w615 side -->
  
