--- a/src/Jili/ApiBundle/Resources/views/Top/task.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/task.html.twig
@@ -14,7 +14,7 @@
     {% endif %}
     <li><a href="{{ asset(path('_shopping_list'),'cdn1') }}">去购物</a></li>
     {% for item in task.cpa %}
-    <li><a href="{{ path('_advertiserment_index',{'id':item.id}) }}">{{ item.title[:8] }}<span>{{ item.incentive }}</span>米粒</a></li>
+    <li><a href="{{ path('_advertiserment_index',{'id':item.id}) }}">{{ item.title[:8] }}<span>{{ item.incentive }}米粒</span></a></li>
     {% endfor %}
   </ul>
 </li>
