--- a/src/Jili/EmarBundle/Resources/views/Product/recommendByWeb.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/recommendByWeb.html.twig
@@ -1,6 +1,6 @@
 {% if products|length > 0 %}
       <h3>为您推荐</h3>
-      <ul class="commodityUl clearfix">
+      <ul class="commodityByWeb commodityUl clearfix">
     {% for row in  products %}
         <li>
           <dt>
