--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -34,6 +34,19 @@
         {{ render(controller('JiliApiBundle:Top:event') ) }}
       </div><!-- eof mask -->
     </div><!-- eof timeline -->
+	<div class="w204 fl" style="margin-top:15px;">
+	<script type="text/javascript">
+	/*200*90，纯文字*/
+	var cpro_id = "u1522251";
+	</script>
+	<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+	
+	<script type="text/javascript">
+	/*200*200，纯图片*/
+	var cpro_id = "u1522038";
+	</script>
+	<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+	</div>
   </div><!-- w204 side -->
 
   <div class="w615 fl">
