--- a/src/Jili/ApiBundle/Resources/views/Top/myTask.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/myTask.html.twig
@@ -3,13 +3,13 @@
     {% if myTask.task.game==1 %}
     <li><a href="{{ asset(path('_game_index'),'cdn1')  }}">
       <dt>小鸡找米</dt>
-      <dd>最高<em>5888</em>米粒</dd>
+      <dd class="corLightGray">最高<em>5888</em>米粒</dd>
       </a></li>
       {% endif %}
     {% if myTask.task.ad==1 %}
     <li><a href="{{ asset(path('_advertiserment_list'),'cdn1')  }}">
       <dt>广告任务墙</dt>
-      <dd><em>{{ myTask.adCheck }}</em>更新</dd>
+      <dd class="corLightGray"><em>{{ myTask.adCheck }}</em>更新</dd>
       </a></li>
       {% endif %}
     <li><a href="{{ asset(path('_shopping_list'),'cdn1') }}">
@@ -18,19 +18,19 @@
     {% if myTask.task.wen==1 %}
     <li class="vote"><a target="_bank" href="http://www.91wenwen.net/vote/#active">
       <dt>91问问快速问答</dt>
-      <dd><em>1</em>米粒</dd>
+      <dd class="corLightGray"><em>1</em>米粒</dd>
       </a></li>
       {% endif %}
     {% if myTask.task.checkin==1 %}
     <li class="signs"><a id="sign" onclick="signs();">
       <dt>每日签到</dt>
-      <dd><em>{{myTask.task.checkinPoint}}</em>米粒</dd>
+      <dd class="corLightGray"><em>{{myTask.task.checkinPoint}}</em>米粒</dd>
       </a></li>
       {% endif %}
       {% for item in myTask.task.cpa %}
     <li><a href="{{ path('_advertiserment_index',{'id':item.id}) }}">
       <dt>{{ item.title[:8] }}</dt>
-      <dd><em>{{ item.incentive }}</em>米粒</dd>
+      <dd class="corLightGray"><em>{{ item.incentive }}</em>米粒</dd>
       </a></li>
       {% endfor %}
   </ul>
@@ -48,7 +48,7 @@
                     {{ item.title }}
                   {% endif %}
               {% endif %} </dt>
-      <dd><em>{% if item.incentiveType==2 or item.incentiveType==19  %}
+      <dd class="corLightGray"><em>{% if item.incentiveType==2 or item.incentiveType==19  %}
                      {% if item.orderStatus > 1 %}
                         {{ item.incentive }}
                      {% else %}
@@ -76,7 +76,7 @@
                     {{ item.title }}
                   {% endif %}
               {% endif %} </dt>
-      <dd><em>{% if item.incentiveType==2 or item.incentiveType==19  %}
+      <dd class="corLightGray"><em>{% if item.incentiveType==2 or item.incentiveType==19  %}
                      {% if item.orderStatus > 1 %}
                         {{ item.incentive }}
                      {% else %}
