--- a/web/css140307/index.css
+++ b/web/css140307/index.css
@@ -65,7 +65,7 @@
 	line-height: 35px;
 	padding-left: 25px;
 	margin-bottom: 10px;
-	color:#525252;
+	color:#333; 
 }
 #task .menu {
 	position: absolute;
@@ -117,9 +117,6 @@
 }
 #task .taskList li.bbn {
 	border-bottom: none;
-}
-#task .taskList li a {
-	color: #666;
 }
 #task .taskList li dt {
 	float: left;
@@ -215,9 +212,6 @@
 	list-style: disc outside none;
 	margin-left: 15px;
 	position: relative;
-}
-#news ul li a {
-	color: #666666;
 }
 #news ul li a:hover {
 	color: #EA4C11;
@@ -318,6 +312,7 @@
 #ranking ul li dd {
 	float: left;
 	margin-left: 30px;
+	color:#525252;
 }
 #ranking ul li dt {
 	float: right;
@@ -354,6 +349,7 @@
 	padding: 0 10px 0 15px;
 	overflow: hidden;
 }
+#timeline ul li p{ color:#999;}
 #timeline ul li span {
 	color: #65b1ee;
 	margin-right: 3px;
@@ -550,6 +546,7 @@
 #getMallList li a {
 	color: #666
 }
+#getMallList li a p{ color:#999;}
 #getMallList li em {
 	color: #FF6B4F;
 }
