--- a/src/Jili/EmarBundle/Resources/views/page_nav.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/page_nav.html.twig
@@ -1,11 +1,11 @@
 <ul class="pageNav">
-    {% if total_ <= 1 %} 
-    {% elseif total_ > 1 and total_ <= 5 %}
+    {% if last <= 1 %} 
+    {% elseif last > 1 and last <= 5 %}
 
         {% for i in range(1, last ) %}
             <!-- i: {{ i }} -->
             {% if cur != i %} 
-            <li> <a href="{{ path( app.request.attributes.get('_route'),  app.request.query.all|merge({'p': i})) }}">首页</a></li>
+            <li> <a href="{{ path( app.request.attributes.get('_route'),  app.request.query.all|merge({'p': i})) }}">{{ i }}</a></li>
             {% else %}
             <li class="currPage"> <a href="#" onclick="javascript: return false;">{{ cur }}</a> </li>
             {% endif %}
