--- a/web/css140307/commodity834.css
+++ b/web/css140307/commodity834.css
@@ -1,6 +1,6 @@
 ul.commodityUl{ background-color:#FFF; border-top:3px solid #EA4B11; padding:0px 0 15px 0px;}
 ul.commodityUl.btbn{ border-top:none;}
-ul.commodityUl li{width:269px; border-bottom: 1px solid #EEE; border-right: 1px solid #EEE; float: left; padding:20px 20px 10px;}
+ul.commodityUl li{width:269px; height:254px; border-bottom: 1px solid #EEE; border-right: 1px solid #EEE; float: left; padding:20px 20px 10px;}
 ul.commodityUl li.brn{ border-right:none;}
 ul.commodityUl li.bbn{ border-bottom:none;}
 ul.commodityUl li dd{font-size:12px; padding:0 0 10px 0; color:#999999;}
