--- a/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
@@ -14,7 +14,7 @@
 <script src="{{ asset('js140307/screen.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/cps.js') }}" language="javascript"></script>
 <script type="text/javascript">
-	  $(function (){
+	  $(document).ready(function() {
 		for(i=2; i<19; i+=3){
 		  $("ul.commodityUl li").eq(i).css("border-right", "none");
 		  }
